--- a/asp_net_mvc_spd221/Views/_ViewImports.cshtml
+++ b/asp_net_mvc_spd221/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using asp_net_mvc_spd221
 @using asp_net_mvc_spd221.Models
+@using asp_net_mvc_spd221.Controllers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
