--- a/asp_net_mvc_spd221/Views/Home/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Home/Index.cshtml
@@ -4,6 +4,10 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+<div class="text-center mb-2">
+    <a asp-controller="Contacts" asp-action="Index" type="button" class="btn btn-primary">Show Contacts</a>
+</div>
+
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
