Create Db Context

--- a/asp_net_mvc_spd221/Views/Home/About.cshtml
+++ b/asp_net_mvc_spd221/Views/Home/About.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>About Page</h1>
+﻿@{
+    //Layout = null;
+}
+
+<h1>About Page</h1>
 <p>This is ASP.NET Core MVC Educational Application for SPD221 Group</p>
 <button type="button" class="btn btn-success">Push Me</button>
 
