Create admin product page.

--- a/asp_net_mvc_spd221/Views/_ViewImports.cshtml
+++ b/asp_net_mvc_spd221/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using asp_net_mvc_spd221
 @using asp_net_mvc_spd221.Models
 @using asp_net_mvc_spd221.Controllers
+@using asp_net_mvc_spd221.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
