--- a/asp_net_mvc_spd221/Views/Products/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Index.cshtml
@@ -3,10 +3,11 @@
 <h1>Products Panel</h1>
 <p>Here you can manage all the available products.</p>
 
-<table class="table table-striped table-hover">
+<table id="product-table" class="table table-striped table-hover">
     <thead>
         <tr>
             <th scope="col">#</th>
+            <th scope="col"></th>
             <th scope="col">Name</th>
             <th scope="col">Price</th>
             <th scope="col">Category</th>
@@ -17,8 +18,12 @@
     <tbody>
         @foreach (var i in Model)
         {
-            <tr>
+            <tr class="align-middle">
+                
                 <th scope="row">@i.Id</th>
+                <td>
+                    <img height="45" src="@i.ImageUrl" alt="Product Image" />
+                </td>
                 <td>
                     @i.Name
                     @if(i.Discount > 0)
