--- a/asp_net_mvc_spd221/Views/Products/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Index.cshtml
@@ -13,6 +13,7 @@
             <th scope="col">Category</th>
             <th scope="col">Discount</th>
             <th scope="col">Status</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
@@ -43,6 +44,19 @@
                     {
                         <span class="badge bg-secondary">Out of Stock</span>
                     }
+                </td>
+                <td>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-secondary">
+                            <i class="bi bi-info-circle-fill"></i>
+                        </button>
+                        <button type="button" class="btn btn-warning">
+                            <i class="bi bi-pencil-fill"></i>
+                        </button>
+                        <a asp-action="Delete" asp-route-id="@i.Id" class="btn btn-danger">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </div>
                 </td>
             </tr>
         }
