--- a/asp_net_mvc_spd221/Views/Products/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Index.cshtml
@@ -3,6 +3,8 @@
 <h1>Products Panel</h1>
 <p>Here you can manage all the available products.</p>
 
+<a asp-controller="Products" asp-action="Create" class="btn btn-primary">Create New Product</a>
+
 <table id="product-table" class="table table-striped table-hover">
     <thead>
         <tr>
