--- a/asp_net_mvc_spd221/Views/Products/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Index.cshtml
@@ -52,9 +52,9 @@
                         <button type="button" class="btn btn-secondary">
                             <i class="bi bi-info-circle-fill"></i>
                         </button>
-                        <button type="button" class="btn btn-warning">
+                        <a asp-action="Edit" asp-route-id="@i.Id" type="button" class="btn btn-warning">
                             <i class="bi bi-pencil-fill"></i>
-                        </button>
+                        </a>
                         <a asp-action="Delete" asp-route-id="@i.Id" class="btn btn-danger">
                             <i class="bi bi-trash-fill"></i>
                         </a>
