--- a/asp_net_mvc_spd221/Views/Products/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Index.cshtml
@@ -3,7 +3,17 @@
 <h1>Products Panel</h1>
 <p>Here you can manage all the available products.</p>
 
-<a asp-controller="Products" asp-action="Create" class="btn btn-primary">Create New Product</a>
+<div class="d-flex gap-2">
+    <a asp-controller="Products" asp-action="Create" class="btn btn-primary">Create New Product</a>
+    <div class="col-md-4 ms-auto">
+        <select id="inputState" class="form-select">
+            <option selected>All Categories</option>
+        </select>
+    </div>
+    <a class="btn btn-secondary">Filter</a>
+</div>
+
+
 
 <table id="product-table" class="table table-striped table-hover">
     <thead>
