--- a/asp_net_mvc_spd221/Views/Products/Create.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Create.cshtml
@@ -11,14 +11,14 @@
         <label asp-for=Price class="form-label">Price</label>
         <div class="input-group mb-3">
             <span class="input-group-text">$</span>
-            <input asp-for=Price type="number" min="0" step="100" class="form-control" placeholder="Enter product price">
+            <input asp-for=Price type="number" min="0" step="0.01" class="form-control" placeholder="Enter product price">
         </div>
     </div>
     <div class="col-md-4">
         <label asp-for=Discount class="form-label">Discount</label>
         <div class="input-group mb-3">
             <span class="input-group-text">%</span>
-            <input asp-for=Discount type="number" min="0" max="100" step="5" class="form-control" placeholder="Enter product discount">
+            <input asp-for=Discount type="number" min="0" max="100" class="form-control" placeholder="Enter product discount">
         </div>
     </div>
 
