--- a/asp_net_mvc_spd221/Views/Products/Edit.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Edit.cshtml
@@ -1,25 +1,28 @@
-﻿@model Product;
+﻿@model EditProductModel;
 
 <h2>Edit Product</h2>
 
 <form class="row g-3" asp-action="Edit" method="post">
     <div class="col-md-12">
         <label asp-for=Name class="form-label">Name</label>
-        <input asp-for=Name type="text" class="form-control" placeholder="Enter product name">
+        <input asp-for="Name" type="text" class="form-control" placeholder="Enter product name">
+        <span asp-validation-for=Name class="small text-danger"></span>
     </div>
     <div class="col-md-8">
         <label asp-for=Price class="form-label">Price</label>
-        <div class="input-group mb-3">
+        <div class="input-group">
             <span class="input-group-text">$</span>
             <input asp-for=Price type="number" min="0" step="0.01" class="form-control" placeholder="Enter product price">
         </div>
+        <span asp-validation-for=Price class="small text-danger"></span>
     </div>
     <div class="col-md-4">
         <label asp-for=Discount class="form-label">Discount</label>
-        <div class="input-group mb-3">
+        <div class="input-group">
             <span class="input-group-text">%</span>
-            <input asp-for=Discount type="number" min="0" max="100" step="1" class="form-control" placeholder="Enter product discount">
+            <input asp-for=Discount type="number" min="0" max="100" class="form-control" placeholder="Enter product discount">
         </div>
+        <span asp-validation-for=Discount class="small text-danger"></span>
     </div>
 
     <div class="col-md-4">
@@ -27,15 +30,18 @@
         <select asp-for="CategoryId" asp-items=ViewBag.Categories id="inputState" class="form-select">
             <option selected>Choose...</option>
         </select>
+        <span asp-validation-for=CategoryId class="small text-danger"></span>
     </div>
     <div class="col-md-8">
         <label asp-for=ImageUrl for="inputEmail4" class="form-label">Image URL</label>
         <input asp-for=ImageUrl type="url" class="form-control" placeholder="Enter product image address" id="inputEmail4">
+        <span asp-validation-for=ImageUrl class="small text-danger"></span>
     </div>
 
     <div class="col-md-12 mb-3">
         <label asp-for=Description for="exampleFormControlTextarea1" class="form-label">Description</label>
         <textarea asp-for=Description class="form-control" id="exampleFormControlTextarea1" placeholder="Enter product description" rows="3"></textarea>
+        <span asp-validation-for=Description class="small text-danger"></span>
     </div>
 
     <div class="col-12">
