--- a/asp_net_mvc_spd221/Views/Home/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Home/Index.cshtml
@@ -1,12 +1,31 @@
-﻿
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿@model List<Product>
+
+<div class="text-center my-3">
+    <h1 class="display-4 my-2">Welcome to Product Catalog</h1>
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        @foreach (var i in Model)
+        {
+            <div class="col">
+                <div class="card h-100">
+                    <img height="240" src="@i.ImageUrl" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@i.Name</h5>
+                        <p class="card-text">
+                            @i.Price$ - @i.Category?.Name
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">
+                            <button type="button" class="btn btn-primary">Add to Cart</button>
+                        </small>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
 
-<div class="text-center mb-2">
-    <a asp-controller="Contacts" asp-action="Index" type="button" class="btn btn-primary">Show Contacts</a>
-</div>
 
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
