Fix bug with create/edit product page

--- a/asp_net_mvc_spd221/Views/Products/Upsert.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Upsert.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductModel;
 @{
-    bool isCreate = Model == null;
+    bool isCreate = ViewBag.Creation ?? false;
 }
 
 <h2>@(isCreate ? "Create" : "Edit") Product</h2>
