--- a/asp_net_mvc_spd221/Views/Home/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
-                            <button type="button" class="btn btn-primary">Add to Cart</button>
+                            <a asp-controller="Cart" asp-action="Append" asp-route-id="@i.Id" class="btn btn-primary">Add to Cart</a>
                         </small>
                     </div>
                 </div>
