--- a/asp_net_mvc_spd221/Views/Cart/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Cart/Index.cshtml
@@ -20,16 +20,21 @@
             @foreach (var i in Model)
             {
                 <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">
-                            @i.Name
-                            @if (i.Discount > 0)
-                            {
-                                <span class="badge bg-primary">SALE</span>
-                            }
+                    <div class="ms-2 me-auto d-flex align-items-center">
+                        <div>
+                            <img height="50" src="@i.ImageUrl" alt="@i.Name"/>
                         </div>
-                        <div class="text-start">
-                            <span>@i.CategoryName</span>
+                        <div>
+                            <div class="fw-bold">
+                                @i.Name
+                                @if (i.Discount > 0)
+                                {
+                                    <span class="badge bg-primary">SALE</span>
+                                }
+                            </div>
+                            <div class="text-start">
+                                <span>@i.CategoryName</span>
+                            </div>
                         </div>
                     </div>
                     <span class="badge bg-primary rounded-pill">@i.Price$</span>
