--- a/asp_net_mvc_spd221/Views/Cart/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Cart/Index.cshtml
@@ -22,6 +22,11 @@
                 <li class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto d-flex align-items-center">
                         <div>
+                            <a asp-action="Remove" asp-route-id="@i.Id" class="text-danger small cart-item-delete-button">
+                                <i class="bi bi-x-square-fill"></i>
+                            </a>
+                        </div>
+                        <div>
                             <img height="50" src="@i.ImageUrl" alt="@i.Name"/>
                         </div>
                         <div>
