--- a/asp_net_mvc_spd221/wwwroot/css/site.css
+++ b/asp_net_mvc_spd221/wwwroot/css/site.css
@@ -33,3 +33,8 @@ body {
     object-fit: contain;
     margin: 6px;
 }
+
+.cart-item-delete-button:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
