--- a/asp_net_mvc_spd221/Views/Cart/Index.cshtml
+++ b/asp_net_mvc_spd221/Views/Cart/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ProductCartModel>
 @{
-    decimal totalPrice = Model.Sum(x => x.Price);
+    decimal totalPrice = Model.Sum(x => x.Price * x.CountToBuy);
     bool isEmpty = !Model.Any();
 }
 
@@ -16,7 +16,7 @@
             <p>Your cart is empty</p>
         }
 
-        <ol class="list-group list-group-numbered">
+        <ol class="list-group">
             @foreach (var i in Model)
             {
                 <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -41,8 +41,11 @@
                                 <span>@i.CategoryName</span>
                             </div>
                         </div>
+                        <div class="ms-4">
+                            <span class="badge bg-secondary">@i.CountToBuy</span>
+                        </div>
                     </div>
-                    <span class="badge bg-primary rounded-pill">@i.Price$</span>
+                    <span class="badge bg-primary rounded-pill">@(i.Price * i.CountToBuy)$</span>
                 </li>
             }
         </ol>
