--- a/asp_net_mvc_spd221/Views/Products/Upsert.cshtml
+++ b/asp_net_mvc_spd221/Views/Products/Upsert.cshtml
@@ -11,7 +11,15 @@
         <input asp-for="Name" type="text" class="form-control" placeholder="Enter product name">
         <span asp-validation-for=Name class="small text-danger"></span>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-3">
+        <label asp-for=Quantity class="form-label">Quantity</label>
+        <div class="input-group">
+            <span class="input-group-text">pcs</span>
+            <input asp-for=Quantity type="number" min="0" class="form-control" placeholder="Enter product quantity">
+        </div>
+        <span asp-validation-for=Quantity class="small text-danger"></span>
+    </div>
+    <div class="col-md-6">
         <label asp-for=Price class="form-label">Price</label>
         <div class="input-group">
             <span class="input-group-text">$</span>
@@ -19,7 +27,7 @@
         </div>
         <span asp-validation-for=Price class="small text-danger"></span>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <label asp-for=Discount class="form-label">Discount</label>
         <div class="input-group">
             <span class="input-group-text">%</span>
@@ -47,14 +55,14 @@
         <span asp-validation-for=Description class="small text-danger"></span>
     </div>
 
-    <div class="col-12">
+    @* <div class="col-12">
         <div class="form-check">
             <input asp-for=InStock class="form-check-input" type="checkbox" id="gridCheck">
             <label asp-for=InStock class="form-check-label" for="gridCheck">
                 In Stock
             </label>
         </div>
-    </div>
+    </div> *@
 
     <div class="col-6">
         <a asp-action="Index" class="btn btn-dark w-100">Go Back</a>
