--- a/asp_net_mvc_spd221/Views/Shared/_Layout.cshtml
+++ b/asp_net_mvc_spd221/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
                             <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">My Cart</a>
                         </li>
                     </ul>
+
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
